<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Silver Screen Advisor</string>
    <string name="menu_settings">Settings</string>
    <string name="search_movies">Search</string>
    <string name="get_recommendations">Recommendations</string>
    <string name="go">Go</string>
    <string name="hello">Welcome!</string>
    <string name="title_activity_movie_show">MovieShowActivity</string>
    <string name="critic_rating">Critic Rating:</string>
    <string name="audience_rating">Audience Rating:</string>
    <string name="mpaa_rating">MPAA Rating:</string>
    <string name="synopsis">Synopsis</string>
    <string name="release_date">Release Year</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="empty">00</string>
    <string name="logout">Log out</string>
    <string name="title_activity_main">MainActivity</string>
	<string name="app_id">523362714374297</string>
	<string name="search_string"/>
	<string name="search_list">Movies, Actors, etc.</string>
	<string name="synop_title">Synopsis</string>
</resources>