<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieShowActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

	<TextView
	    android:id="@+id/title"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentTop="true"
	    android:layout_marginLeft="17dp"
	    android:layout_marginTop="17dp"
	    android:text="@string/movie_title"
	    android:textSize="20sp"
	    android:textStyle="bold" />

	<TextView
	    android:id="@+id/year"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/title"
	    android:layout_below="@+id/title"
	    android:text="@string/release_date" />

	<TextView
	    android:id="@+id/audience_text"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/critic_text"
	    android:layout_marginLeft="40dp"
	    android:layout_toRightOf="@+id/title"
	    android:text="@string/audience_rating" />

	<TextView
	    android:id="@+id/audience_value"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBaseline="@+id/audience_text"
	    android:layout_alignBottom="@+id/audience_text"
	    android:layout_marginLeft="18dp"
	    android:layout_toRightOf="@+id/audience_text"
	    android:text="@string/empty" />

	<TextView
	    android:id="@+id/critic_value"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/audience_value"
	    android:layout_alignLeft="@+id/audience_value"
	    android:text="@string/empty" />

	<TextView
	    android:id="@+id/critic_text"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/title"
	    android:layout_toLeftOf="@+id/audience_value"
	    android:text="@string/critic_rating" />

	<ImageView
	    android:id="@+id/imageView1"
	    android:contentDescription="@string/movie_poster"
	    android:layout_width="200dp"
	    android:layout_height="250dp"
	    android:layout_alignLeft="@+id/year"
	    android:layout_below="@+id/audience_text"
	    android:layout_marginTop="14dp"
	    android:scaleType="centerInside"
	    android:src="@drawable/com_facebook_picker_item_background" />

	<TextView
	    android:id="@+id/synopsis"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/imageView1"
	    android:layout_below="@+id/imageView1"
	    android:layout_marginTop="14dp"
	    android:text="@string/synopsis" />
	</RelativeLayout>
</ScrollView>